Add JVM interview questions